@@ -126,3 +126,4 @@ Support for switching between CKEdiktor GUIs
 
 Sep 7
 switches filling interwiki select array from setTimeout to set Interval
+smoother switching betweein image paste modes
